ec2_launch_template/security_group.tf
resource "aws_security_group" "chapter_02_security_group_launch_configuration" {
  name        = "${local.workspace}-launch-configuration"
  description = "A security group that allows port 22 and port 80"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name      = "${local.workspace}-launch-configuration"
    workspace = local.workspace
  }

}
